1. Fixed icon alignment on the academics component 2. Added google analytics tag

--- a/src/app/components/academics/academics.component.css
+++ b/src/app/components/academics/academics.component.css
@@ -9,6 +9,7 @@
 .divider-icon {
     width: 30px !important;
     margin-right: 20px;
+    margin-left: 20px;
 }
 
 .divider-container {
